==> tricdt/Tutorial-STM32/STM32VN/UART/UART/SYSTEM/usart/usart.c <==
#include "usart.h"
#include "stdio.h"

uint8_t USART_Getc(USART_TypeDef* USARTx) {
	int8_t c = 0;
	USART_t* u = USART_INT_GetUsart(USARTx);
	
	/* Check if we have any data in buffer */
	if (u->Num > 0) {
		if (u->Out == u->Size) {
			u->Out = 0;
		}
		c = *(u->Buffer + u->Out);
		u->Out++;
		u->Num--;
	}
	return c;
}

uint8_t USART_BufferEmpty(USART_TypeDef* USARTx) {
	USART_t* u = USART_INT_GetUsart(USARTx);
	return (u->Num == 0);
}

uint8_t USART_BufferFull(USART_TypeDef* USARTx) {
	USART_t* u = USART_INT_GetUsart(USARTx);
	return (u->Num == u->Size);
}

void USART_ClearBuffer(USART_TypeDef* USARTx) {
	USART_t* u = USART_INT_GetUsart(USARTx);
	
	u->Num = 0;
	u->In = 0;
	u->Out = 0;
}

uint8_t USART_FindCharacter(USART_TypeDef* USARTx, volatile char c) {
	uint16_t num, out;
	USART_t* u = USART_INT_GetUsart(USARTx);
	
	/* Temp variables */
	num = u->Num;
	out = u->Out;
	
	while (num > 0) {
		/* Check overflow */
		if (out == u->Size) {
			out = 0;
		}
		if (u->Buffer[out] == c) {
			/* Character found */
			return 1;
		}
		out++;
		num--;
	}
	
	/* Character is not in buffer */
	return 0;
}

void USART1_InitPins(USART_PinsPack_t pinspack) {	
	//Enable clock for USART1

	if (pinspack == Pins_PA9PA10) {
		// Enable clock for GPIOA
		RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA|RCC_APB2Periph_AFIO, ENABLE);
		RCC_APB2PeriphClockCmd( RCC_APB2Periph_USART1,ENABLE);
      //Configure USART1 Tx (PA.09) as alternate function push-pull 
     GPIO_InitStruct.GPIO_Pin = GPIO_Pin_9;
     GPIO_InitStruct.GPIO_Mode = GPIO_Mode_AF_PP; 
     GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
     GPIO_Init(GPIOA, &GPIO_InitStruct);

		// Configure USART1 Rx (PA.10) as input floating 
     GPIO_InitStruct.GPIO_Pin = GPIO_Pin_10;
     GPIO_InitStruct.GPIO_Mode = GPIO_Mode_IN_FLOATING;
     GPIO_Init(GPIOA, &GPIO_InitStruct);
		

		
	} else if (pinspack == Pins_PB6PB7) {
		// Enable clock for GPIOB
		RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB, ENABLE);
		RCC_APB2PeriphClockCmd( RCC_APB2Periph_USART1,ENABLE);
		//Configure USART1 Tx (P) as alternate function push-pull 
     GPIO_InitStruct.GPIO_Pin = GPIO_Pin_6;
     GPIO_InitStruct.GPIO_Mode = GPIO_Mode_AF_PP; 
     GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
     GPIO_Init(GPIOB, &GPIO_InitStruct);

		// Configure USART1 Rx (P) as input floating 
     GPIO_InitStruct.GPIO_Pin = GPIO_Pin_7;
     GPIO_InitStruct.GPIO_Mode = GPIO_Mode_IN_FLOATING;
     GPIO_Init(GPIOB, &GPIO_InitStruct);
	}
}

void USART2_InitPins(USART_PinsPack_t pinspack) {
	//Enable clock for USART2
	RCC_APB1PeriphClockCmd(RCC_APB1Periph_USART2, ENABLE);

	if (pinspack == Pins_PA2PA3) {
		// Enable clock for GPIOA
		 RCC_APB2PeriphClockCmd( RCC_APB2Periph_GPIOA , ENABLE);
		 RCC_APB1PeriphClockCmd( RCC_APB1Periph_USART2,ENABLE);
      //Configure USART2 Tx (PA.02) as alternate function push-pull 
     GPIO_InitStruct.GPIO_Pin = GPIO_Pin_2;
     GPIO_InitStruct.GPIO_Mode = GPIO_Mode_AF_PP;   
     GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
     GPIO_Init(GPIOA, &GPIO_InitStruct);
     //Configure USART2 Rx (PA.03) as input floating 
     GPIO_InitStruct.GPIO_Pin = GPIO_Pin_3;
     GPIO_InitStruct.GPIO_Mode = GPIO_Mode_IN_FLOATING;
     GPIO_Init(GPIOA, &GPIO_InitStruct);
		
	} else if (pinspack == Pins_PD5PD6) {
		// Enable clock for GPIOD
		 RCC_APB2PeriphClockCmd( RCC_APB2Periph_GPIOD , ENABLE);
		 RCC_APB1PeriphClockCmd( RCC_APB1Periph_USART2,ENABLE);
      //Configure USART2 Tx (P) as alternate function push-pull 
     GPIO_InitStruct.GPIO_Pin = GPIO_Pin_5;
     GPIO_InitStruct.GPIO_Mode = GPIO_Mode_AF_PP;   
     GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
     GPIO_Init(GPIOD, &GPIO_InitStruct);
     //Configure USART2 Rx (P) as input floating 
     GPIO_InitStruct.GPIO_Pin = GPIO_Pin_6;
     GPIO_InitStruct.GPIO_Mode = GPIO_Mode_IN_FLOATING;
     GPIO_Init(GPIOD, &GPIO_InitStruct);

	}
}

void USART3_InitPins(USART_PinsPack_t pinspack) {
	//Enable clock for USART3
	RCC_APB1PeriphClockCmd(RCC_APB1Periph_USART3, ENABLE);

	if (pinspack == Pins_PB10PB11) {
		
		// Enable clock for GPIOB
		RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB, ENABLE);
		RCC_APB2PeriphClockCmd( RCC_APB1Periph_USART3,ENABLE);
		//Configure USART1 Tx (P) as alternate function push-pull 
     GPIO_InitStruct.GPIO_Pin = GPIO_Pin_10;
     GPIO_InitStruct.GPIO_Mode = GPIO_Mode_AF_PP; 
     GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
     GPIO_Init(GPIOB, &GPIO_InitStruct);

		// Configure USART1 Rx (P) as input floating 
     GPIO_InitStruct.GPIO_Pin = GPIO_Pin_11;
     GPIO_InitStruct.GPIO_Mode = GPIO_Mode_IN_FLOATING;
     GPIO_Init(GPIOB, &GPIO_InitStruct);
	} else if (pinspack == Pins_PC10PC11) {
		// Enable clock for GPIOC
		RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOC, ENABLE);
		RCC_APB2PeriphClockCmd( RCC_APB1Periph_USART3,ENABLE);
		//Configure USART1 Tx (P) as alternate function push-pull 
     GPIO_InitStruct.GPIO_Pin = GPIO_Pin_10;
     GPIO_InitStruct.GPIO_Mode = GPIO_Mode_AF_PP; 
     GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
     GPIO_Init(GPIOC, &GPIO_InitStruct);

		// Configure USART1 Rx (P) as input floating 
     GPIO_InitStruct.GPIO_Pin = GPIO_Pin_11;
     GPIO_InitStruct.GPIO_Mode = GPIO_Mode_IN_FLOATING;
     GPIO_Init(GPIOC, &GPIO_InitStruct);
	} else if (pinspack == Pins_PD8PD9) {
		// Enable clock for GPIOD
		RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOD, ENABLE);
		RCC_APB2PeriphClockCmd( RCC_APB1Periph_USART3,ENABLE);
		//Configure USART1 Tx (P) as alternate function push-pull 
     GPIO_InitStruct.GPIO_Pin = GPIO_Pin_8;
     GPIO_InitStruct.GPIO_Mode = GPIO_Mode_AF_PP; 
     GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
     GPIO_Init(GPIOD, &GPIO_InitStruct);

		// Configure USART1 Rx (P) as input floating 
     GPIO_InitStruct.GPIO_Pin = GPIO_Pin_9;
     GPIO_InitStruct.GPIO_Mode = GPIO_Mode_IN_FLOATING;
     GPIO_Init(GPIOD, &GPIO_InitStruct);
	}
}

void UART4_InitPins(USART_PinsPack_t pinspack) {
	//Enable clock for UART4
	RCC_APB1PeriphClockCmd(RCC_APB1Periph_UART4, ENABLE);

	if (pinspack == Pins_PA0PA1) {
		// Enable clock for GPIOA
		
	} else if (pinspack == Pins_PC10PC11) {
		// Enable clock for GPIOC
		
	}
}

void UART5_InitPins(USART_PinsPack_t pinspack) {
	//Enable clock for UART5
	RCC_APB1PeriphClockCmd(RCC_APB1Periph_UART5, ENABLE);

	if (pinspack == Pins_PC12PD2) {
		
	}
}

void UART7_InitPins(USART_PinsPack_t pinspack) {
	//Enable clock for UART7
	RCC_APB1PeriphClockCmd(RCC_APB1Periph_UART7, ENABLE);

	if (pinspack == Pins_PB8PE7) {
		// Enable clock for GPIOE
		RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOE, ENABLE);

		GPIO_PinAFConfig(GPIOE, GPIO_PinSource8, GPIO_AF_UART7);
		GPIO_PinAFConfig(GPIOE, GPIO_PinSource7, GPIO_AF_UART7);
		//                         TX           RX
		GPIO_InitStruct.GPIO_Pin = GPIO_Pin_8 | GPIO_Pin_7;

		//Alternating function
		GPIO_Init(GPIOE, &GPIO_InitStruct);
	} else if (pinspack ==  Pins_PF7PF6) {
		// Enable clock for GPIOF
		RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOF, ENABLE);

		GPIO_PinAFConfig(GPIOF, GPIO_PinSource7, GPIO_AF_UART7);
		GPIO_PinAFConfig(GPIOF, GPIO_PinSource6, GPIO_AF_UART7);
		//                         TX           RX
		GPIO_InitStruct.GPIO_Pin = GPIO_Pin_7 | GPIO_Pin_6;

		//Alternating function
		GPIO_Init(GPIOF, &GPIO_InitStruct);
	}
}

void UART8_InitPins(USART_PinsPack_t pinspack) {
	//Enable clock for UART8
	RCC_APB1PeriphClockCmd(RCC_APB1Periph_UART8, ENABLE);

	if (pinspack == Pins_PE1PE0) {
		// Enable clock for GPIOE
		RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOE, ENABLE);

		GPIO_PinAFConfig(GPIOE, GPIO_PinSource1, GPIO_AF_UART8);
		GPIO_PinAFConfig(GPIOE, GPIO_PinSource0, GPIO_AF_UART8);
		//                         TX           RX
		GPIO_InitStruct.GPIO_Pin = GPIO_Pin_1 | GPIO_Pin_0;

		//Alternating function
		GPIO_Init(GPIOE, &GPIO_InitStruct);
	}
}

void USART1_IRQHandler(void) {
	//Check if interrupt was because data is received
	if (USART_GetITStatus(USART1, USART_IT_RXNE)) {
		#ifdef USART1_USE_CUSTOM_IRQ
			//Call user function
			USART1_ReceiveHandler(USART1->DR);
		#else
			//Put received data into internal buffer
			USART_INT_InsertToBuffer(&F4_USART1, USART1->DR);
		#endif
	}
}

void USART2_IRQHandler(void) {
	//Check if interrupt was because data is received
	if (USART_GetITStatus(USART2, USART_IT_RXNE)) {
		#ifdef USART2_USE_CUSTOM_IRQ
			//Call user function
			USART2_ReceiveHandler(USART2->DR);
		#else 
			//Put received data into internal buffer
			USART_INT_InsertToBuffer(&F4_USART2, USART2->DR);
		#endif
	}
}

void USART3_IRQHandler(void) {
	//Check if interrupt was because data is received
	if (USART_GetITStatus(USART3, USART_IT_RXNE)) {
		#ifdef USART3_USE_CUSTOM_IRQ
			//Call user function
			USART3_ReceiveHandler(USART3->DR);
		#else
			//Put received data into internal buffer
			USART_INT_InsertToBuffer(&F4_USART3, USART3->DR);
		#endif
	}
}

void UART4_IRQHandler(void) {
	//Check if interrupt was because data is received
	if (USART_GetITStatus(UART4, USART_IT_RXNE)) {
		#ifdef UART4_USE_CUSTOM_IRQ
			//Call user function
			UART4_ReceiveHandler(UART4->DR);
		#else
			//Put received data into internal buffer
			USART_INT_InsertToBuffer(&F4_UART4, UART4->DR);
		#endif
	}
}

void UART5_IRQHandler(void) {
	//Check if interrupt was because data is received
	if (USART_GetITStatus(UART5, USART_IT_RXNE)) {
		#ifdef UART5_USE_CUSTOM_IRQ
			//Call user function
			UART5_ReceiveHandler(UART5->DR);
		#else
			//Put received data into internal buffer
			USART_INT_InsertToBuffer(&F4_UART5, UART5->DR);
		#endif
	}
}

void UART7_IRQHandler(void) {
	//Check if interrupt was because data is received
	if (USART_GetITStatus(UART7, USART_IT_RXNE)) {
		#ifdef UART7_USE_CUSTOM_IRQ
			//Call user function
			UART7_ReceiveHandler(UART7->DR);
		#else
			//Put received data into internal buffer
			USART_INT_InsertToBuffer(&F4_UART7, UART7->DR);
		#endif
	}
}

void UART8_IRQHandler(void) {
	//Check if interrupt was because data is received
	if (USART_GetITStatus(UART8, USART_IT_RXNE)) {
		#ifdef UART8_USE_CUSTOM_IRQ
			//Call user function
			UART8_ReceiveHandler(UART8->DR);
		#else
			//Put received data into internal buffer
			USART_INT_InsertToBuffer(&F4_UART8, UART8->DR);
		#endif
	}
}
