==> Khaivo16/STM32/F1/HAL/CAN_MX/HARDWARE/usart/usart.c <==
#include "usart.h"

uint8_t USART_Getc(USART_TypeDef* USARTx) {
	int8_t c = 0;
	BUFFER_t* u = USART_INT_GetUSARTBuffer(USARTx);
	
	/* Check if we have any data in buffer */
	if (u->Num > 0) {
		if (u->Out == u->Size) {
			u->Out = 0;
		}
		c = *(u->Buffer + u->Out);
		u->Out++;
		u->Num--;
	}
	return c;
}

int16_t USART_FindCharacter(USART_TypeDef* USARTx, uint8_t c) {
	uint16_t num, out;
	BUFFER_t* u = USART_INT_GetUSARTBuffer(USARTx);
	
	/* Temp variables */
	num = u->Num;
	out = u->Out;
	
	while (num > 0) {
		/* Check overflow */
		if (out == u->Size) {
			out = 0;
		}
		if (u->Buffer[out] == c) {
			/* Character found */
			return 1;
		}
		out++;
		num--;
	}
	
	/* Character is not in buffer */
	return 0;
}

uint8_t USART_BufferEmpty(USART_TypeDef* USARTx) {
	BUFFER_t* u = USART_INT_GetUSARTBuffer(USARTx);
	return (u->Num == 0);
}

uint8_t USART_BufferFull(USART_TypeDef* USARTx) {
	BUFFER_t* u = USART_INT_GetUSARTBuffer(USARTx);
	return (u->Num == u->Size);
}

void USART_ClearBuffer(USART_TypeDef* USARTx) {
	BUFFER_t* u = USART_INT_GetUSARTBuffer(USARTx);
	
	u->Num = 0;
	u->In = 0;
	u->Out = 0;
}

void USART1_InitPins(USART_PinsPack_t pinspack) {	
	/* Init pins */
#if defined(GPIOA)
	if (pinspack == Pins_PA9PA10) {
		//GPIO_InitAlternate(GPIOA, GPIO_PIN_9 | GPIO_PIN_10, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_USART1);
		pinMode(PA9,AF_PP);
		pinMode(PA10,INPUT);
	}
#endif
#if defined(GPIOB)
	if (pinspack == Pins_PB6PB7) {
		//GPIO_InitAlternate(GPIOB, GPIO_PIN_6 | GPIO_PIN_7, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_USART1);
		pinMode(PB6,AF_PP);
		pinMode(PB7,INPUT);
	}
#endif
#if defined(GPIOA) && defined(GPIOB)
	if (pinspack == Pins_PA9PB7) {
		//GPIO_InitAlternate(GPIOA, GPIO_PIN_9, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_USART1);
		//GPIO_InitAlternate(GPIOB, GPIO_PIN_7, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_USART1);
		pinMode(PA9,AF_PP);
		pinMode(PB7,INPUT);
	}
#endif
	if (pinspack == USART_PinsPack_Custom) {
		/* Init custom pins, callback used */
		//USART_InitCustomPinsCallback(USART1, GPIO_AF_USART1);
	}
}

void USART2_InitPins(USART_PinsPack_t pinspack) {
	/* Init pins */
#if defined(GPIOA)
	if (pinspack == Pins_PA2PA3) {
		//GPIO_InitAlternate(GPIOA, GPIO_PIN_2 | GPIO_PIN_3, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_USART2);
		pinMode(PA2,AF_PP);
		pinMode(PA3,INPUT);
	}
#endif
#if defined(GPIOD)
	if (pinspack == Pins_PD5PD6) {
		//GPIO_InitAlternate(GPIOD, GPIO_PIN_5 | GPIO_PIN_6, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_USART2);
		pinMode(PD5,AF_PP);
		pinMode(PD6,INPUT);
	}
#endif
	if (pinspack == USART_PinsPack_Custom) {
		/* Init custom pins, callback used */
		//USART_InitCustomPinsCallback(USART2, GPIO_AF_USART2);
	}
}

void USART3_InitPins(USART_PinsPack_t pinspack) {
	/* Init pins */
#if defined(GPIOB)
	if (pinspack == Pins_PB10PB11) {
		//GPIO_InitAlternate(GPIOB, GPIO_PIN_10 | GPIO_PIN_11, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_USART3);
		pinMode(PB10,AF_PP);
		pinMode(PB11,INPUT);
	}
#endif
#if defined(GPIOC)
	if (pinspack == Pins_PC10PC11) {
		//GPIO_InitAlternate(GPIOC, GPIO_PIN_10 | GPIO_PIN_11, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_USART3);
		pinMode(PC10,AF_PP);
		pinMode(PC11,INPUT);
	}
#endif
#if defined(GPIOD)
	if (pinspack == Pins_PD8PD9) {
		//GPIO_InitAlternate(GPIOD, GPIO_PIN_8 | GPIO_PIN_9, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_USART3);
		pinMode(PD8,AF_PP);
		pinMode(PD9,INPUT);
	}
#endif
	if (pinspack == USART_PinsPack_Custom) {
		/* Init custom pins, callback used */
		//USART_InitCustomPinsCallback(USART3, GPIO_AF_USART3);
	}
}

void UART4_InitPins(USART_PinsPack_t pinspack) {
	/* Init pins */
#if defined(GPIOA)
	if (pinspack == Pins_PA0PA1) {
		//GPIO_InitAlternate(GPIOA, GPIO_PIN_0 | GPIO_PIN_1, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_UART4);
		pinMode(PA0,AF_PP);
		pinMode(PA1,INPUT);
	}
#endif
#if defined(GPIOC)
	if (pinspack == Pins_PC10PC11) {
		//GPIO_InitAlternate(GPIOC, GPIO_PIN_10 | GPIO_PIN_11, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_UART4);
		pinMode(PC10,AF_PP);
		pinMode(PC11,INPUT);
	}
#endif
	if (pinspack == USART_PinsPack_Custom) {
		/* Init custom pins, callback used */
		//USART_InitCustomPinsCallback(UART4, GPIO_AF_UART4);
	}
}

void UART5_InitPins(USART_PinsPack_t pinspack) {
	/* Init pins */
#if defined(GPIOC) && defined(GPIOD)
	if (pinspack == Pins_PC12PD2) {
		//GPIO_InitAlternate(GPIOC, GPIO_PIN_12, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_UART5);
		//GPIO_InitAlternate(GPIOD, GPIO_PIN_2, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_UART5);
		pinMode(PC12,AF_PP);
		pinMode(PD2,INPUT);
	}
#endif
	if (pinspack == USART_PinsPack_Custom) {
		/* Init custom pins, callback used */
		//USART_InitCustomPinsCallback(UART5, GPIO_AF_UART5);
	}
}

void UART7_InitPins(USART_PinsPack_t pinspack) {
	/* Init pins */
#if defined(GPIOE)
	if (pinspack == Pins_PE8PE7) {
		//GPIO_InitAlternate(GPIOE, GPIO_PIN_8 | GPIO_PIN_7, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_UART7);
		pinMode(PE8,AF_PP);
		pinMode(PE7,INPUT);
	}
#endif
#if defined(GPIOF)
	if (pinspack == Pins_PF7PF6) {
		//GPIO_InitAlternate(GPIOF, GPIO_PIN_7 | GPIO_PIN_6, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_UART7);
		pinMode(PF7,AF_PP);
		pinMode(PF6,INPUT);
	}
#endif
	if (pinspack == USART_PinsPack_Custom) {
		/* Init custom pins, callback used */
		//USART_InitCustomPinsCallback(UART7, GPIO_AF_UART7);
	}
}

void UART8_InitPins(USART_PinsPack_t pinspack) {
	/* Init pins */
#if defined(GPIOE)
	if (pinspack == Pins_PE1PE0) {
		//GPIO_InitAlternate(GPIOE, GPIO_PIN_1 | GPIO_PIN_0, GPIO_OType_PP, GPIO_PuPd_UP, GPIO_Speed_High, GPIO_AF_UART8);
		pinMode(PE1,AF_PP);
		pinMode(PE0,INPUT);
	}
#endif
	if (pinspack == USART_PinsPack_Custom) {
		/* Init custom pins, callback used */
		//USART_InitCustomPinsCallback(UART8, GPIO_AF_UART8);
	}
}

void USART1_IRQHandler(void) {
	
	#ifdef USART_DMA 
	{
		HAL_UART_IRQHandler(&uartdma);  

		if (__HAL_UART_GET_FLAG (&uartdma, UART_FLAG_IDLE))
		{
			__HAL_UART_CLEAR_IDLEFLAG (&uartdma);
			HAL_UART_RxCpltCallback (&uartdma);  
		}	
	}	
	#else
		{
			/* Check if interrupt was because data is received */
			if (USART1->USART_STATUS_REG & USART_ISR_RXNE) {
			#ifdef USART1_USE_CUSTOM_IRQ
					/* Call user function */
					USART1_ReceiveHandler(USART1->DR);
			#else
					/* Put received data into internal buffer */
					USART_INT_InsertToBuffer(&USART1x, USART1->DR);
			#endif
			}
			/* Clear all USART flags */
			USART_INT_ClearAllFlags(USART1, USART1_IRQn);
		}
	#endif	
	
}

void USART2_IRQHandler(void) {
	#ifdef USART_DMA 
		HAL_UART_IRQHandler(&uartdma);  

  if (__HAL_UART_GET_FLAG (&uartdma, UART_FLAG_IDLE))
  {
	  __HAL_UART_CLEAR_IDLEFLAG (&uartdma);
	  HAL_UART_RxCpltCallback (&uartdma);  
	}	
	
	#else
			/* Check if interrupt was because data is received */
			if (USART2->USART_STATUS_REG & USART_ISR_RXNE) {
			#ifdef USART2_USE_CUSTOM_IRQ
					/* Call user function */
					USART2_ReceiveHandler(USART12->DR);
			#else 
					/* Put received data into internal buffer */
					USART_INT_InsertToBuffer(&USART2x, USART2->DR);
			#endif
			}
			
			/* Clear all USART flags */
			USART_INT_ClearAllFlags(USART2, USART2_IRQn);
	#endif	
}

void USART3_IRQHandler(void) {
	#ifdef USART_DMA 
		HAL_UART_IRQHandler(&uartdma);  

  if (__HAL_UART_GET_FLAG (&uartdma, UART_FLAG_IDLE))
  {
	  __HAL_UART_CLEAR_IDLEFLAG (&uartdma);
	  HAL_UART_RxCpltCallback (&uartdma);  
	}	
	
	#else
			/* Check if interrupt was because data is received */
			if (USART3->USART_STATUS_REG & USART_ISR_RXNE) {
			#ifdef USART3_USE_CUSTOM_IRQ
					/* Call user function */
					USART3_ReceiveHandler(USART3->DR);
			#else 
					/* Put received data into internal buffer */
					USART_INT_InsertToBuffer(&USART3x, USART3->DR);
			#endif
			}
			
			/* Clear all USART flags */
			USART_INT_ClearAllFlags(USART3, USART3_IRQn);
	#endif
}

void UART4_IRQHandler(void) {
	#ifdef USART_DMA 
		HAL_UART_IRQHandler(&uartdma);  

  if (__HAL_UART_GET_FLAG (&uartdma, UART_FLAG_IDLE))
  {
	  __HAL_UART_CLEAR_IDLEFLAG (&uartdma);
	  HAL_UART_RxCpltCallback (&uartdma);  
	}	
	
	#else
	
	/* Check if interrupt was because data is received */
			if (UART4->USART_STATUS_REG & USART_ISR_RXNE) {
		#ifdef UART4_USE_CUSTOM_IRQ
				/* Call user function */
				UART4_ReceiveHandler(UART4->DR);
		#else
				/* Put received data into internal buffer */
				USART_INT_InsertToBuffer(&UART4x, UART4->DR);
		#endif
			}
			
			/* Clear all USART flags */
			USART_INT_ClearAllFlags(UART4, UART4_IRQn);
	 #endif
}

void UART5_IRQHandler(void) {
	#ifdef USART_DMA 
		HAL_UART_IRQHandler(&uartdma);  

  if (__HAL_UART_GET_FLAG (&uartdma, UART_FLAG_IDLE))
  {
	  __HAL_UART_CLEAR_IDLEFLAG (&uartdma);
	  HAL_UART_RxCpltCallback (&uartdma);  
	}	
	
	#else
	
	/* Check if interrupt was because data is received */
			if (UART5->USART_STATUS_REG & USART_ISR_RXNE) {
		#ifdef UART5_USE_CUSTOM_IRQ
				/* Call user function */
				UART5_ReceiveHandler(UART5->DR);
		#else
				/* Put received data into internal buffer */
				USART_INT_InsertToBuffer(&UART5x, UART5->DR);
		#endif
			}
			
			/* Clear all USART flags */
			USART_INT_ClearAllFlags(UART5, UART5_IRQn);
	 #endif
}

void UART7_IRQHandler(void) {
	#ifdef USART_DMA 
		HAL_UART_IRQHandler(&uartdma);  

  if (__HAL_UART_GET_FLAG (&uartdma, UART_FLAG_IDLE))
  {
	  __HAL_UART_CLEAR_IDLEFLAG (&uartdma);
	  HAL_UART_RxCpltCallback (&uartdma);  
	}	
	
	#else		
	
	/* Check if interrupt was because data is received */
			if (UART7->USART_STATUS_REG & USART_ISR_RXNE) {
		#ifdef UART7_USE_CUSTOM_IRQ
				/* Call user function */
				UART7_ReceiveHandler(USART7->DR);
		#else
				/* Put received data into internal buffer */
				USART_INT_InsertToBuffer(&UART7x, USART7->DR);
		#endif
			}
			
			/* Clear all USART flags */
			USART_INT_ClearAllFlags(UART7, UART7_IRQn);
	 #endif
}

void UART8_IRQHandler(void) {
	#ifdef USART_DMA 
		HAL_UART_IRQHandler(&uartdma);  

  if (__HAL_UART_GET_FLAG (&uartdma, UART_FLAG_IDLE))
  {
	  __HAL_UART_CLEAR_IDLEFLAG (&uartdma);
	  HAL_UART_RxCpltCallback (&uartdma);  
	}	
	
	#else

	/* Check if interrupt was because data is received */
			if (UART8->USART_STATUS_REG & USART_ISR_RXNE) {
		#ifdef UART8_USE_CUSTOM_IRQ
				/* Call user function */
				UART8_ReceiveHandler(USART8->DR);
		#else
				/* Put received data into internal buffer */
				USART_INT_InsertToBuffer(&UART8x, USART8->DR);
		#endif
			}
			
			/* Clear all USART flags */
			USART_INT_ClearAllFlags(UART8, UART8_IRQn);
	 #endif
}
